--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
       "no-restricted-syntax": "off",
       "no-param-reassign": "off",
       "no-plusplus": "off",
+      "no-underscore-dangle": "off",
       "no-use-before-define": ["error", {"functions": false}],
       "prefer-destructuring": "error"
     }
