--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "v8": "^0.1.0",
     "vue": "^2.6.11",
-    "vuetify": "^2.4.0",
-    "vue-code-highlight": "^0.7.8"
+    "vue-code-highlight": "^0.7.8",
+    "vuetify": "^2.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -30,9 +31,17 @@
   },
   "eslintConfig": {
     "root": true,
-    "env": {"node": true},
-    "extends": ["plugin:vue/essential", "eslint:recommended", "@vue/airbnb"],
-    "parserOptions": {"parser": "babel-eslint"},
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended",
+      "@vue/airbnb"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
     "rules": {
       "global-require": "off",
       "import/prefer-default-export": "off",
@@ -41,7 +50,12 @@
       "no-param-reassign": "off",
       "no-plusplus": "off",
       "no-underscore-dangle": "off",
-      "no-use-before-define": ["error", {"functions": false}],
+      "no-use-before-define": [
+        "error",
+        {
+          "functions": false
+        }
+      ],
       "prefer-destructuring": "error"
     }
   },
