added deep cloning and removed airbnb eslint

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
     "v8": "^0.1.0",
     "vue": "^2.6.11",
     "vue-code-highlight": "^0.7.8",
@@ -36,27 +37,10 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended",
-      "@vue/airbnb"
+      "eslint:recommended"
     ],
     "parserOptions": {
       "parser": "babel-eslint"
-    },
-    "rules": {
-      "global-require": "off",
-      "import/prefer-default-export": "off",
-      "no-console": "off",
-      "no-restricted-syntax": "off",
-      "no-param-reassign": "off",
-      "no-plusplus": "off",
-      "no-underscore-dangle": "off",
-      "no-use-before-define": [
-        "error",
-        {
-          "functions": false
-        }
-      ],
-      "prefer-destructuring": "error"
     }
   },
   "browserslist": [
