--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.21",
     "v8": "^0.1.0",
     "vue": "^2.6.11",
+    "vue-chat-scroll": "^1.4.0",
     "vue-code-highlight": "^0.7.8",
     "vuetify": "^2.4.0"
   },
